// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col should render with default styles 1`] = `
.grid-0 {
  position: relative;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

<div
  class="grid-0 grid-1"
/>
`;

exports[`Col should render with offset styles 1`] = `
.grid-0 {
  position: relative;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: 25%;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: 25%;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: 25%;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: 33.33333333333333%;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: 41.66666666666667%;
  }
}

<div
  class="grid-0 grid-1"
/>
`;

exports[`Col should render with offset styles for media [object Object] 1`] = `
.grid-0 {
  position: relative;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    margin-left: 25%;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    margin-left: 25%;
  }
}

@media (min-width:48em) {
  .grid-0 {
    margin-left: 25%;
  }
}

@media (min-width:64em) {
  .grid-0 {
    margin-left: 33.33333333333333%;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    margin-left: 41.66666666666667%;
  }
}

<div
  class="grid-0 grid-1"
/>
`;

exports[`Col should render with width styles for media [object Object] 1`] = `
.grid-0 {
  position: relative;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width:1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width:1em) {
  .grid-0 {
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
  }
}

@media (min-width:33.75em) {
  .grid-0 {
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
  }
}

@media (min-width:48em) {
  .grid-0 {
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
  }
}

@media (min-width:64em) {
  .grid-0 {
    -webkit-flex: 0 0 33.33333333333333%;
    -ms-flex: 0 0 33.33333333333333%;
    flex: 0 0 33.33333333333333%;
    max-width: 33.33333333333333%;
  }
}

@media (min-width:71.25em) {
  .grid-0 {
    -webkit-flex: 0 0 41.66666666666667%;
    -ms-flex: 0 0 41.66666666666667%;
    flex: 0 0 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

<div
  class="grid-0 grid-1"
/>
`;
